--- a/PennState/PennState.csproj
+++ b/PennState/PennState.csproj
@@ -230,6 +230,7 @@
     <Compile Include="ViewModels\AddItemViewModel.cs" />
     <Compile Include="ViewModels\AddUserViewModel.cs" />
     <Compile Include="ViewModels\EditItemViewModel.cs" />
+    <Compile Include="ViewModels\ItemDetailsModel.cs" />
     <Compile Include="ViewModels\ItemViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -242,6 +243,7 @@
     <Content Include="Content\jquery-ui.structure.min.css" />
     <Content Include="Content\jquery-ui.theme.css" />
     <Content Include="Content\jquery-ui.theme.min.css" />
+    <Content Include="Content\jquery.bxslider.css" />
     <Content Include="Content\PagedList.css" />
     <Content Include="Content\themes\default-dark\32px.png" />
     <Content Include="Content\themes\default-dark\40px.png" />
@@ -258,15 +260,8 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="Images\Uploads\SubLocations\1\account creation_user_login.PNG" />
-    <Content Include="Images\Uploads\SubLocations\1\Thumbs\account creation_user_login.PNG" />
-    <Content Include="Images\Uploads\SubLocations\2\psu.jpg" />
     <Content Include="Images\Uploads\SubLocations\2\Thumbs\ExcelFile Story1.PNG" />
-    <Content Include="Images\Uploads\SubLocations\2\Thumbs\psu.jpg" />
     <Content Include="Images\Uploads\SubLocations\2\Thumbs\timeline2.PNG" />
-    <Content Include="Images\Uploads\SubLocations\2\Thumbs\TreeViewClass.PNG" />
-    <Content Include="Images\Uploads\SubLocations\3\account creation_user_login.PNG" />
-    <Content Include="Images\Uploads\SubLocations\3\Thumbs\account creation_user_login.PNG" />
     <Content Include="Models\DBModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>DBModel.edmx</DependentUpon>
@@ -299,6 +294,8 @@
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery-ui.js" />
     <Content Include="Scripts\jquery-ui.min.js" />
+    <Content Include="Scripts\jquery.bxslider.js" />
+    <Content Include="Scripts\jquery.bxslider.min.js" />
     <Content Include="Scripts\jquery.modal.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
@@ -342,13 +339,16 @@
     <Content Include="Views\Item\GetItemList.cshtml" />
     <Content Include="Views\Item\GetLocation.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
+    <Content Include="Views\Item\ItemDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Database\" />
     <Folder Include="Images\Uploads\SubLocations\1\Gallery\Thumbs\" />
+    <Folder Include="Images\Uploads\SubLocations\1\Thumbs\" />
     <Folder Include="Images\Uploads\SubLocations\2\Gallery\Thumbs\" />
     <Folder Include="Images\Uploads\SubLocations\3\Gallery\Thumbs\" />
+    <Folder Include="Images\Uploads\SubLocations\3\Thumbs\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
