--- a/PennState/Web.config
+++ b/PennState/Web.config
@@ -4,15 +4,11 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
   </configSections>
-  <!--<connectionStrings>
-    <add name="ContextModel" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=LabDBContext;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\ContextModel.mdf" providerName="System.Data.SqlClient" />
-  </connectionStrings>-->
-  <!--<connectionStrings>
-    <add name="ContextModel" connectionString="Data Source=DESKTOP-BSHPCUQ;Initial Catalog=PennStateDB;Integrated Security=True;" providerName="System.Data.SqlClient" />
-  </connectionStrings>-->
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -36,7 +32,7 @@
       </providers>
     </roleManager>
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.6.1" />
+    <httpRuntime targetFramework="4.6.1" maxUrlLength="4096" maxQueryStringLength="4096"/>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -75,6 +71,11 @@
     </assemblyBinding>
   </runtime>
   <system.webServer>
+    <security>
+      <requestFiltering>
+        <requestLimits maxQueryString="4096"></requestLimits>
+      </requestFiltering>
+    </security>
     <modules runAllManagedModulesForAllRequests="true">
       <remove name="FormsAuthentication" />
       <remove name="TelemetryCorrelationHttpModule" />
@@ -87,8 +88,10 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <connectionStrings><add name="ContextModel" connectionString="metadata=res://*/Models.DBModel.csdl|res://*/Models.DBModel.ssdl|res://*/Models.DBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-BSHPCUQ;initial catalog=PennStateDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    <add name="PennStateDB" connectionString="metadata=res://*/Models.PennStateDB.csdl|res://*/Models.PennStateDB.ssdl|res://*/Models.PennStateDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-BSHPCUQ;initial catalog=PennStateDB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <!--<connectionStrings>
-    <add name="ContextModel" connectionString="metadata=res://*/Models.DBModel.csdl|res://*/Models.DBModel.ssdl|res://*/Models.DBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;initial catalog=PennStateDB;integrated security=True;pooling=False;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PennStateDB" connectionString="metadata=res://*/Models.PennStateDB.csdl|res://*/Models.PennStateDB.ssdl|res://*/Models.PennStateDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;initial catalog=PennStateDB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>-->
 </configuration>
