--- a/PennState/Web.config
+++ b/PennState/Web.config
@@ -32,7 +32,7 @@
       </providers>
     </roleManager>
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.6.1" maxUrlLength="4096" maxQueryStringLength="4096"/>
+    <httpRuntime targetFramework="4.6.1" maxUrlLength="4096" maxQueryStringLength="4096" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -82,16 +82,16 @@
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="integratedMode,managedHandler" />
     </modules>
   </system.webServer>
-  <system.codedom>
-    <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
-    </compilers>
-  </system.codedom>
-  <connectionStrings>
-    <add name="PennStateDB" connectionString="metadata=res://*/Models.PennStateDB.csdl|res://*/Models.PennStateDB.ssdl|res://*/Models.PennStateDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-BSHPCUQ;initial catalog=PennStateDB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
   <!--<connectionStrings>
-    <add name="PennStateDB" connectionString="metadata=res://*/Models.PennStateDB.csdl|res://*/Models.PennStateDB.ssdl|res://*/Models.PennStateDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;initial catalog=PennStateDB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PennStateDB" connectionString="metadata=res://*/Models.PennStateDB.csdl|res://*/Models.PennStateDB.ssdl|res://*/Models.PennStateDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-BSHPCUQ;initial catalog=PennStateDB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>-->
+<connectionStrings>
+  <add name="PennStateDB" connectionString="metadata=res://*/Models.PennStateDB.csdl|res://*/Models.PennStateDB.ssdl|res://*/Models.PennStateDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=PennStateDB;Integrated Security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+</connectionStrings>
+<system.codedom>
+<compilers>
+<compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
+<compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
+</compilers>
+</system.codedom>
 </configuration>
