--- a/PennState/PennState.csproj
+++ b/PennState/PennState.csproj
@@ -158,6 +158,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ItemController.cs" />
     <Compile Include="Controllers\TreeViewController.cs" />
@@ -359,6 +360,7 @@
     <Content Include="Views\Item\ItemDetails.cshtml" />
     <Content Include="Views\Item\FlagItem.cshtml" />
     <Content Include="Views\Item\GetRequests.cshtml" />
+    <Content Include="Views\Error\AccessDenied.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
