--- a/PennState/PennState.csproj
+++ b/PennState/PennState.csproj
@@ -48,6 +48,12 @@
     <Reference Include="AutoMapper, Version=4.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
       <HintPath>..\packages\AutoMapper.4.1.1\lib\net45\AutoMapper.dll</HintPath>
     </Reference>
+    <Reference Include="Common.Logging, Version=3.3.1.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
+      <HintPath>..\packages\Common.Logging.3.3.1\lib\net40\Common.Logging.dll</HintPath>
+    </Reference>
+    <Reference Include="Common.Logging.Core, Version=3.3.1.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
+      <HintPath>..\packages\Common.Logging.Core.3.3.1\lib\net40\Common.Logging.Core.dll</HintPath>
+    </Reference>
     <Reference Include="Dapper, Version=1.60.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Dapper.1.60.6\lib\net451\Dapper.dll</HintPath>
     </Reference>
@@ -74,10 +80,14 @@
     <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
       <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
     </Reference>
+    <Reference Include="Quartz, Version=2.4.1.0, Culture=neutral, PublicKeyToken=f6b8c98a402cc8a4, processorArchitecture=MSIL">
+      <HintPath>..\packages\Quartz.2.4.1\lib\net40\Quartz.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -155,6 +165,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
+    <Compile Include="App_Start\EmailJob.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
@@ -170,6 +181,7 @@
     <Compile Include="Models\CatagoryOwner.cs" />
     <Compile Include="Models\CatagoryType.cs" />
     <Compile Include="Models\CatagoryVendor.cs" />
+    <Compile Include="Models\CheckedOut.cs" />
     <Compile Include="Models\Crypto.cs" />
     <Compile Include="Models\CustomAuthorizeAttribute.cs" />
     <Compile Include="Models\CustomMembership.cs" />
@@ -209,6 +221,9 @@
       <DependentUpon>PennStateDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Tbl_CatagoryVendors.cs">
+      <DependentUpon>PennStateDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Tbl_CheckedOut.cs">
       <DependentUpon>PennStateDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Tbl_File.cs">
@@ -272,7 +287,6 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="Item\Cubbyhole1.jpg" />
     <Content Include="Models\PennStateDB.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>PennStateDB.edmx</DependentUpon>
@@ -295,6 +309,9 @@
     <Content Include="Models\PennStateDB.edmx.diagram">
       <DependentUpon>PennStateDB.edmx</DependentUpon>
     </Content>
+    <None Include="job_scheduling_data_2_0.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Scripts\jquery-3.3.1-vsdoc.js" />
     <Content Include="Scripts\chosen.jquery.js" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
@@ -361,11 +378,13 @@
     <Content Include="Views\Item\FlagItem.cshtml" />
     <Content Include="Views\Item\GetRequests.cshtml" />
     <Content Include="Views\Error\AccessDenied.cshtml" />
+    <Content Include="Views\Item\Scheduler.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Database\" />
     <Folder Include="Images\Uploads\SubLocations\" />
+    <Folder Include="Item\" />
     <Folder Include="Scripts\Uploadify\" />
     <Folder Include="Test\" />
   </ItemGroup>
