--- a/PennState/packages.config
+++ b/PennState/packages.config
@@ -3,6 +3,8 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="AutoMapper" version="4.1.1" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
+  <package id="Common.Logging" version="3.3.1" targetFramework="net461" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net461" />
   <package id="Dapper" version="1.60.6" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
@@ -21,6 +23,7 @@
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net461" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net461" />
+  <package id="Quartz" version="2.4.1" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
