--- a/PennState/Web.config
+++ b/PennState/Web.config
@@ -85,9 +85,12 @@
   <!--<connectionStrings>
     <add name="PennStateDB" connectionString="metadata=res://*/Models.PennStateDB.csdl|res://*/Models.PennStateDB.ssdl|res://*/Models.PennStateDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-BSHPCUQ;initial catalog=PennStateDB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>-->
-<connectionStrings>
+<!--<connectionStrings>
   <add name="PennStateDB" connectionString="metadata=res://*/Models.PennStateDB.csdl|res://*/Models.PennStateDB.ssdl|res://*/Models.PennStateDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=PennStateDB;Integrated Security=True;MultipleActiveResultSets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-</connectionStrings>
+</connectionStrings>-->
+  <connectionStrings>
+    <add name="PennStateDB" connectionString="metadata=res://*/Models.PennStateDB.csdl|res://*/Models.PennStateDB.ssdl|res://*/Models.PennStateDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=tcp:pennstatedbserver.database.windows.net,1433;Initial Catalog=PennStateDB;Persist Security Info=False;User ID=Mjwood51;Password=Hundredhertz51;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 <system.codedom>
 <compilers>
 <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
